@@ -267,6 +267,7 @@ be_visitor_valuebox_union_member_ci::visit_interface_fwd (be_interface_fwd *node
 int
 be_visitor_valuebox_union_member_ci::visit_valuetype (be_valuetype *node)
 {
+  ACE_UNUSED_ARG( node );
   // Valuetype is not a valid component of a valuebox
   return 0;
 }
@@ -274,6 +275,7 @@ be_visitor_valuebox_union_member_ci::visit_valuetype (be_valuetype *node)
 int
 be_visitor_valuebox_union_member_ci::visit_valuetype_fwd (be_valuetype_fwd *node)
 {
+  ACE_UNUSED_ARG( node );
   // Valuetype is not a valid component of a valuebox
   return 0;
 }
